fix(audiobook): improve audiobook streaming and player UI (#513)